# spherical-horses-api

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  pyrightconfig.json  requirements.txt
docker/: Dockerfile  docker-compose.yml
source/db/: session.py
source/db/migrations/: env.py  script.py.mako
source/db/migrations/versions/: 2025-11-25__a4d62647fac6.py
source/db/models/: __init__.py  extensions.py  horse.py
source/db/repositories/: __init__.py  horse.py
source/db/services/: __init__.py  horse.py
source/schemas/: __init__.py  horse.py
source/shared/: settings.py  times.py
source/web/: app.py  dependencies.py
source/web/routers/: __init__.py  horses.py
