[project]
name = "web-test"
version = "0.1.0"
description = "FastAPI REST API для управления сферическими конями в вакууме"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "alembic>=1.14.0",
    "advanced-alchemy>=1.8.0",
    "uuid-utils>=0.11.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.6",
]
